ui/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --main-btn-bg: #333a44;
    --main-btn-bg-hover: #30475e;
    --main-btn-disabled: rgba(102, 102, 102, 0.9);
    --main-color-text: white;
    --main-color-text-disabled: white;
    --animation-delay: 0.3s;
}

* {
    padding: 0;
    margin: 0;
    font-family: 'Roboto', sans-serif;
}

#container {
    position: absolute;
    height: auto;
    top: 20%;
    right: 20%;
    border-radius: 5px;
    background: transparent !important;
}

#buttons {
    max-height: 75vh;
    width: 35vw;
    overflow-x: none;
    overflow-y: auto;
    padding: 10px;
}

html,
body {
    background: transparent !important;
}

#buttons::-webkit-scrollbar {
    display: none;
}

body::-webkit-scrollbar {
    display: none;
}

.button {
    width: auto;
    max-width: 53%;
    height: 10%;
    background: var(--main-btn-bg);
    margin: auto;
    position: relative;
    top: 10%;
    margin: 0.5rem auto 0rem auto;
    overflow: hidden;
    padding: 0.45rem;
    border-radius: 0.3rem;
    display: flex;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    cursor: pointer;
    transition: background var(--animation-delay) ease;
}

.button .header img {
    width: 100%;
}

.pin-container {
    width: auto;
    max-width: 53%;
    height: 10%;
    margin: auto;
    margin-top: 0.5rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-row: 1;
    grid-gap: 0.5rem;
}

.pin {
    grid-column: 1/2;
    height: 100%;
    background: var(--main-btn-bg);
    overflow: hidden;
    padding: 0.3rem;
    display: flex;
    justify-content: left;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    cursor: pointer;
    border-radius: 0.3rem;
    transition: background var(--animation-delay) ease;
}

.pin:hover {
    background: var(--main-btn-bg-hover) !important;
    transition: background var(--animation-delay) ease;
}

.leave {
    grid-column: 2/3;
    height: 100%;
    background: var(--main-btn-bg);
    overflow: hidden;
    padding: 0.3rem;
    display: flex;
    justify-content: left;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    cursor: pointer;
    border-radius: 0.3rem;
    transition: background var(--animation-delay) ease;
}

.leave:hover {
    background: var(--main-btn-bg-hover) !important;
    transition: background var(--animation-delay) ease;
}

.stepper-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: auto;
    max-width: 53%;
    height: 10%;
    margin: auto;
}

.stepper {
    width: 50%;
    height: 5%;
    background: var(--main-btn-bg);
    position: relative;
    top: 10%;
    margin: 0rem auto 0rem auto;
    overflow: hidden;
    padding: 0.45rem;
    display: flex;
    justify-content: start;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    cursor: pointer;
    transition: background var(--animation-delay) ease;
}

.stepper:hover {
    background: var(--main-btn-bg-hover) !important;
    transition: background var(--animation-delay) ease;
}

.stepperDisabled {
    width: 50%;
    height: 5%;
    background: var(--main-btn-disabled);
    position: relative;
    top: 10%;
    margin: 0rem auto 0rem auto;
    overflow: hidden;
    padding: 0.45rem;
    display: flex;
    justify-content: start;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    cursor: none;
}

input#search {
    outline: 0;
    border: 0;
    text-align: left;
    color: rgb(255, 255, 255);
    background-color: #292f36;
}

.searchbar {
    width: auto;
    max-width: 53%;
    height: 10%;
    top: 10%;
    background: #292f36;
    margin: auto;
    overflow: hidden;
    padding: 0.45rem;
    border-radius: 0.3rem;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    display: flex;
    flex-direction: row;
    margin: 0.5rem auto 0rem auto;
}

input#searchDisabled {
    outline: 0;
    border: 0;
    text-align: left;
    color: rgb(255, 255, 255);
    background-color: var(--main-btn-disabled);
    cursor: none;
}

.searchbarDisabled {
    width: auto;
    max-width: 53%;
    height: 10%;
    top: 10%;
    background: var(--main-btn-disabled);
    margin: auto;
    overflow: hidden;
    padding: 0.45rem;
    border-radius: 0.3rem;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    display: flex;
    flex-direction: row;
    margin: 0.5rem auto 0rem auto;
    cursor: none;
}


.pervious-radius {
    border-radius: 0.3rem 0.0rem 0.0rem 0.3rem;
}

.next-radius {
    border-radius: 0.0rem 0.3rem 0.3rem 0.0rem;
}

.buttonDisabled {
    width: auto;
    max-width: 53%;
    height: 10%;
    background: var(--main-btn-disabled);
    top: 10%;
    margin: 0.5rem auto 0rem auto;
    overflow: hidden;
    padding: 0.45rem;
    border-radius: 0.3rem;
    display: flex;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    cursor: none,
}

.button:hover {
    background: var(--main-btn-bg-hover) !important;
    transition: background var(--animation-delay) ease;
}

.context {
    color: rgb(232, 229, 229);
    flex-direction: column;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 0.8rem;
    overflow: hidden;
    font-weight: 300;
}

.footer {
    color: rgb(232, 229, 229);
    flex-direction: column;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 0.8rem;
    overflow: hidden;
    font-weight: 300;
}

.header {
    width: 100%;
    max-width: 100%;
    display: flex;
    align-items: center;
    position: relative;
    justify-content: left;
    overflow: wrap;
    color: rgb(232, 229, 229);
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 0.95rem;
    overflow: hidden;
    font-weight: 500;
}

.submenuicon {
    position: absolute;
    text-align: center;
    right: 2%;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    fill: #707070;
    opacity: 60%;
}

#imageHover {
    position: absolute;
    top: 5%;
    right: 80%;
    background: rgba(240, 248, 255, 0.473);
    border-radius: 0.5rem;
}

#image {
    src: "";
    max-height: 40vh;
    max-width: 40vw;
    object-fit: scale-down;
    border-radius: 0.5rem;
}

.icon {
    color: white;
    display: flex;
    align-items: center;
    position: relative;
    justify-content: left;
    padding-left: 0.3rem;
    padding-right: 0.6rem;
    font-size: 1.25rem;
    min-width: 2.1rem;
}

.back {
    fill: #707070;
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
}


/* overlay */

#container-overlay {
    position: absolute;
    height: auto;
    bottom: -2%;
    right: 33%;
    border-radius: 5px;
    background: transparent !important;
}

#infos {
    max-height: 75vh;
    width: 35vw;
    overflow-x: none;
    overflow-y: auto;
    padding: 10px;
}

.info {
    width: auto;
    max-width: 55%;
    height: 10%;
    background: var(--main-btn-bg);
    margin: auto;
    position: relative;
    top: 10%;
    overflow: hidden;
    padding: 0.45rem;
    border-radius: 0.3rem;
    display: flex;
    flex-direction: row;
    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
    user-select: none;
    align-items: center;
    max-width: 50%;
    height: 6rem;
    pointer-events: none;
}

.column {
    width: 100%;
    margin-left: 1rem;
}

.row:nth-child(2) {
    margin-top: 0.2rem;
}

.row:nth-child(3) {
    margin-top: 0.2rem;
}

.row {
    flex-wrap: nowrap;
    display: flex;
    flex-direction: row;
}

.icon-o {
    color: white;
    display: flex;
    align-items: center;
    position: relative;
    justify-content: left;
    padding-left: 0.2rem;
    padding-right: 0.4rem;
    font-size: 1rem;
    min-width: 1.7rem;
}

.is-header {
    pointer-events: none;
}

.is-spacer {
    margin-bottom: 1rem !important;
}

